# converter

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  MediaConverter.spec  PACKAGING.md  QUICKSTART.md  README.md  cli.py  encode.py  ffprobe_utils.py  file_classifier.py  gui.py  logging_utils.py  main.py  pyproject.toml  repair.py  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
converter/: __init__.py  __main__.py  cli.py  config.py  encode.py  ffprobe_utils.py  gui.py  logging_utils.py  main.py  metadata.py  parallel.py  progress.py  repair.py  smart_mode.py  summary.py
homebrew/: INSTALLATION.md  media-converter.rb
scripts/: build_macos.sh  create_dmg.sh
tests/: __init__.py  test_cli.py  test_config.py  test_encode.py  test_ffprobe_utils.py  test_file_classifier.py  test_logging_utils.py  test_main.py  test_metadata.py  test_parallel.py  test_repair.py  test_smart_mode.py  test_subprocess_wrapper.py  test_validation_dryrun.py
