[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media-converter"
version = "0.1.0"
description = "A robust media conversion engine for repairing and encoding legacy video formats"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Media Converter Team"}
]
keywords = ["video", "conversion", "ffmpeg", "media", "encoding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Conversion",
]

dependencies = ["tqdm>=4.66.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
    "types-tqdm>=4.66.0",
]
packaging = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
converter = "converter.cli:main"
converter-gui = "converter.gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["converter*"]
exclude = ["tests*", "tmp_fix*", "originals*", "logs*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "PIE", "SIM", "RET"]
ignore = ["E501", "T201", "DTZ005"]  # Line too long (handled by black), print statements (CLI app), local datetime for log filenames

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
explicit_package_bases = true
namespace_packages = true
exclude = ["tests", "setup.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=term-missing --cov-report=html"
pythonpath = ["."]
